# uav-based-crop-health-cnn

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test_paddle.py
mnist_demo/: train_mnist.py
tomato/: pyproject.toml  requirements.txt
tomato/data/processed/: class_sample_count.csv  idx_to_label.npy  label_to_idx.npy  test.csv  train.csv  train_history.csv  val.csv
tomato/logs/tomato_model/train/: events.out.tfevents.1765200810.DESKTOP-OCL6QQF.13516.2.v2  events.out.tfevents.1765206800.DESKTOP-OCL6QQF.34960.0.v2
tomato/logs/tomato_model/validation/: events.out.tfevents.1765197785.DESKTOP-OCL6QQF.13516.1.v2  events.out.tfevents.1765200963.DESKTOP-OCL6QQF.13516.3.v2  events.out.tfevents.1765206935.DESKTOP-OCL6QQF.34960.1.v2  events.out.tfevents.1765207184.DESKTOP-OCL6QQF.19708.1.v2  events.out.tfevents.1765214340.DESKTOP-OCL6QQF.19708.3.v2  events.out.tfevents.1765296917.DESKTOP-OCL6QQF.17588.1.v2  events.out.tfevents.1765304085.DESKTOP-OCL6QQF.17588.3.v2  events.out.tfevents.1765378163.DESKTOP-OCL6QQF.32400.1.v2  events.out.tfevents.1765385565.DESKTOP-OCL6QQF.32400.3.v2  events.out.tfevents.1765465822.DESKTOP-OCL6QQF.41796.1.v2  events.out.tfevents.1765475720.DESKTOP-OCL6QQF.41796.3.v2  events.out.tfevents.1765556871.DESKTOP-OCL6QQF.46924.1.v2  events.out.tfevents.1765566953.DESKTOP-OCL6QQF.46924.3.v2
tomato/results/tomato_model_archive_4e718e6606b9410246bc6bd925cd011f/: model_info.json
tomato/results/tomato_model_archive_651b65d3a617aaadc7adbec1aa53d0a9/: model_info.json  model_summary.txt
tomato/results/tomato_model_archive_680e6f04a0891c460bb41bcfbd8154c8/: model_info.json
tomato/results/tomato_model_archive_6e6a9fca5e727a253d553bbdc58aab50/: model_info.json  model_summary.txt
tomato/results/tomato_model_archive_a9fb1bf1898fcf03fe80822fc3778b73/: model_info.json
tomato/results/tomato_model_archive_d25ef4141524d7f8740f0e7d3ce3e449/: model_info.json  model_summary.txt
tomato/results/train_vis_20251208_224425/: model_info.json
tomato/results/train_vis_20251208_225459_680e6f04/: model_info.json  model_summary.txt
tomato/src/data/: prepare_tomato_data.py
tomato/src/model/: evaluate_model_gui.py  train_model.py  train_model_20251209.py  train_model_20251210_attention.py  train_model_20251211.py  train_model_20251213.py  visualize_train_info.py  visualize_train_info_20251210-attention.py
(+22 files in other folders)
