[project]
name = "tomato-cnn"
version = "0.1.0"
description = "Tomato stress digit recognition with CNN (Windows + Python 3.10)"
authors = [
    { name = "hu-zltan" }  # 可选，补充作者信息
]
readme = "README.md"
# 严格限定Python版本：3.10~3.12（避开3.13，兼容TensorFlow 2.15）
requires-python = ">=3.10,<3.13"
# 完整依赖清单：包含所有运行CNN项目必需的包（版本和你已安装的一致）
dependencies = [
    "absl-py==2.3.1",
    "astunparse==1.6.3",
    "cachetools==6.2.2",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "colorama==0.4.6",  # Windows终端颜色支持（保留）
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "flatbuffers==25.9.23",
    "fonttools==4.61.0",
    "gast==0.7.0",
    "google-auth==2.43.0",
    "google-auth-oauthlib==1.2.2",
    "google-pasta==0.2.0",
    "grpcio==1.76.0",
    "h5py==3.15.1",
    "idna==3.11",
    "keras==2.15.0",
    "kiwisolver==1.4.9",
    "libclang==18.1.1",
    "markdown==3.10",
    "markupsafe==3.0.3",
    "matplotlib==3.8.4",  # 按你要求更新为3.8.4
    "ml-dtypes==0.2.0",
    "numpy==1.26.4",
    "oauthlib==3.3.1",
    "opt-einsum==3.4.0",
    "packaging==25.0",
    "pandas>=2.3.3",  # 按你要求改为宽松版本
    "pillow==12.0.0",  # 按你要求更新为12.0.0
    "protobuf==4.25.8",
    "psutil>=7.1.3",  # 按你要求改为宽松版本
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",  # 保留时区依赖（pandas必需）
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rsa==4.9.1",
    "seaborn>=0.13.2",  # 按你要求改为宽松版本
    "setuptools==80.9.0",
    "six==1.17.0",
    "tensorboard==2.15.2",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.15.0",
    "tensorflow-estimator==2.15.0",
    "tensorflow-intel==2.15.0",
    "tensorflow-io-gcs-filesystem==0.31.0",  # 保留Windows兼容版本
    "termcolor==3.2.0",
    "tqdm==4.66.1",  # 保留训练进度条依赖
    "typing-extensions==4.15.0",
    "tzdata==2025.2",  # pandas时区数据（保留）
    "urllib3==2.5.0",  # 按你要求更新为2.5.0
    "werkzeug==3.1.4",
    "wheel==0.45.1",
    "wrapt==1.14.2"
]

# uv专属配置：适配Windows环境，避免解析/安装错误
[tool.uv]
# 强制uv使用Python 3.10（和你的虚拟环境一致）
python = "3.10"
# 链接模式：解决Windows下"Failed to hardlink"警告
link-mode = "copy"

# 依赖解析规则：优先选兼容Windows的版本
[tool.uv.resolution]
# 固定tensorflow-io-gcs-filesystem为0.31.0（Windows兼容版本）
force = [
    "tensorflow-io-gcs-filesystem==0.31.0"
]
